--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -61,6 +61,7 @@ ja:
         author_id: '著者'
         tag_ids: 'タグ'
         eyecatch_width: 'アイキャッチ幅'
+        eyecatch_position: '位置'
       medium:
         media_type: 'メディアタイプ'
         attachment: 'ファイル'
